y.output
   0  $accept : Program $end

   1  Program : Functions Main
   2          | Main

   3  Functions : Functions Function
   4            | Function

   5  Function : TYPE VAR Parameters CodeBlock
   6           | VOID VAR Parameters CodeBlock

   7  Parameters : PARENTESIS_ABRE FirstVariable PARENTESIS_CIERRA

   8  FirstVariable : Variable CommaVariable
   9                |

  10  CommaVariable : CommaVariable COMMA Variable
  11                |

  12  Variable : TYPE VAR

  13  CodeBlock : C_BRACKET_ABRE Statement C_BRACKET_CIERRA

  14  Statement : Variable SEMICOLON Statement
  15            | Exp SEMICOLON Statement
  16            | SpecialFunction SEMICOLON Statement
  17            | Variable ASSIGN SpecialFunction SEMICOLON Statement
  18            | Variable ASSIGN Exp SEMICOLON Statement
  19            | VAR ASSIGN Exp SEMICOLON Statement
  20            | EMPLOYEE VAR ASSIGN SpecialFunction SEMICOLON Statement
  21            | EMPLOYEE VAR S_BRACKET_ABRE DIGITO S_BRACKET_CIERRA ASSIGN EmpValues SEMICOLON Statement
  22            | WHILE PARENTESIS_ABRE Exp PARENTESIS_CIERRA CodeBlock Statement
  23            | IF PARENTESIS_ABRE Exp PARENTESIS_CIERRA CodeBlock Statement
  24            | IF PARENTESIS_ABRE Exp PARENTESIS_CIERRA CodeBlock ELSE CodeBlock Statement
  25            | DO CodeBlock WHILE PARENTESIS_ABRE Exp PARENTESIS_CIERRA SEMICOLON Statement
  26            | RETURN Exp SEMICOLON
  27            | BREAK SEMICOLON
  28            |

  29  SpecialFunction : NAME VAR COMMA LASTNAME VAR COMMA CATEGORY VAR COMMA ID DIGITO COMMA ANTIQUITY DIGITO COMMA SALARY DIGITO
  30                  | VAR SALARYFOR DIGITO TimeLapse
  31                  | SHOW_EMPLOYEE VAR

  32  EmpValues : VAR COMMA EmpValues
  33            | VAR

  34  TimeLapse : WEEK
  35            | MONTH
  36            | YEAR

  37  Exp : CondOrExp

  38  MultExp : Term
  39          | MultExp MULT Term
  40          | MultExp DIV Term
  41          | MultExp MOD Term

  42  AddExp : MultExp
  43         | AddExp PLUS MultExp
  44         | AddExp MINUS MultExp

  45  RelExp : AddExp
  46         | RelExp LT AddExp
  47         | RelExp GT AddExp
  48         | RelExp LE AddExp
  49         | RelExp GE AddExp

  50  EqExp : RelExp
  51        | EqExp EQ RelExp
  52        | EqExp NE RelExp

  53  CondAndExp : EqExp
  54             | CondAndExp AND EqExp

  55  CondOrExp : CondAndExp
  56            | CondOrExp OR CondAndExp

  57  FirstVal : Exp CommaVal
  58           |

  59  CommaVal : CommaVal COMMA Exp
  60           |

  61  Term : VAR
  62       | DIGITO
  63       | TRUE
  64       | FALSE_T
  65       | STRING
  66       | NULL_T
  67       | VAR S_BRACKET_ABRE VAR S_BRACKET_CIERRA DOT VAR
  68       | VAR S_BRACKET_ABRE DIGITO S_BRACKET_CIERRA DOT VAR
  69       | VAR PARENTESIS_ABRE FirstVal PARENTESIS_CIERRA
  70       | PARENTESIS_ABRE Exp PARENTESIS_CIERRA

  71  Main : TYPE MAIN PARENTESIS_ABRE VOID PARENTESIS_CIERRA CodeBlock

state 0
	$accept : . Program $end  (0)

	VOID  shift 1
	TYPE  shift 2
	.  error

	Program  goto 3
	Functions  goto 4
	Function  goto 5
	Main  goto 6


state 1
	Function : VOID . VAR Parameters CodeBlock  (6)

	VAR  shift 7
	.  error


state 2
	Function : TYPE . VAR Parameters CodeBlock  (5)
	Main : TYPE . MAIN PARENTESIS_ABRE VOID PARENTESIS_CIERRA CodeBlock  (71)

	MAIN  shift 8
	VAR  shift 9
	.  error


state 3
	$accept : Program . $end  (0)

	$end  accept


state 4
	Program : Functions . Main  (1)
	Functions : Functions . Function  (3)

	VOID  shift 1
	TYPE  shift 2
	.  error

	Function  goto 10
	Main  goto 11


state 5
	Functions : Function .  (4)

	.  reduce 4


state 6
	Program : Main .  (2)

	.  reduce 2


state 7
	Function : VOID VAR . Parameters CodeBlock  (6)

	PARENTESIS_ABRE  shift 12
	.  error

	Parameters  goto 13


state 8
	Main : TYPE MAIN . PARENTESIS_ABRE VOID PARENTESIS_CIERRA CodeBlock  (71)

	PARENTESIS_ABRE  shift 14
	.  error


state 9
	Function : TYPE VAR . Parameters CodeBlock  (5)

	PARENTESIS_ABRE  shift 12
	.  error

	Parameters  goto 15


state 10
	Functions : Functions Function .  (3)

	.  reduce 3


state 11
	Program : Functions Main .  (1)

	.  reduce 1


state 12
	Parameters : PARENTESIS_ABRE . FirstVariable PARENTESIS_CIERRA  (7)
	FirstVariable : .  (9)

	TYPE  shift 16
	PARENTESIS_CIERRA  reduce 9

	Variable  goto 17
	FirstVariable  goto 18


state 13
	Function : VOID VAR Parameters . CodeBlock  (6)

	C_BRACKET_ABRE  shift 19
	.  error

	CodeBlock  goto 20


state 14
	Main : TYPE MAIN PARENTESIS_ABRE . VOID PARENTESIS_CIERRA CodeBlock  (71)

	VOID  shift 21
	.  error


state 15
	Function : TYPE VAR Parameters . CodeBlock  (5)

	C_BRACKET_ABRE  shift 19
	.  error

	CodeBlock  goto 22


state 16
	Variable : TYPE . VAR  (12)

	VAR  shift 23
	.  error


state 17
	FirstVariable : Variable . CommaVariable  (8)
	CommaVariable : .  (11)

	.  reduce 11

	CommaVariable  goto 24


state 18
	Parameters : PARENTESIS_ABRE FirstVariable . PARENTESIS_CIERRA  (7)

	PARENTESIS_CIERRA  shift 25
	.  error


state 19
	CodeBlock : C_BRACKET_ABRE . Statement C_BRACKET_CIERRA  (13)
	Statement : .  (28)

	PARENTESIS_ABRE  shift 26
	WHILE  shift 27
	IF  shift 28
	DO  shift 29
	TRUE  shift 30
	FALSE_T  shift 31
	NULL_T  shift 32
	BREAK  shift 33
	RETURN  shift 34
	NAME  shift 35
	EMPLOYEE  shift 36
	DIGITO  shift 37
	VAR  shift 38
	TYPE  shift 16
	STRING  shift 39
	SHOW_EMPLOYEE  shift 40
	C_BRACKET_CIERRA  reduce 28

	SpecialFunction  goto 41
	Variable  goto 42
	Statement  goto 43
	Exp  goto 44
	AddExp  goto 45
	EqExp  goto 46
	MultExp  goto 47
	RelExp  goto 48
	CondAndExp  goto 49
	CondOrExp  goto 50
	Term  goto 51


state 20
	Function : VOID VAR Parameters CodeBlock .  (6)

	.  reduce 6


state 21
	Main : TYPE MAIN PARENTESIS_ABRE VOID . PARENTESIS_CIERRA CodeBlock  (71)

	PARENTESIS_CIERRA  shift 52
	.  error


state 22
	Function : TYPE VAR Parameters CodeBlock .  (5)

	.  reduce 5


state 23
	Variable : TYPE VAR .  (12)

	.  reduce 12


state 24
	FirstVariable : Variable CommaVariable .  (8)
	CommaVariable : CommaVariable . COMMA Variable  (10)

	COMMA  shift 53
	PARENTESIS_CIERRA  reduce 8


state 25
	Parameters : PARENTESIS_ABRE FirstVariable PARENTESIS_CIERRA .  (7)

	.  reduce 7


state 26
	Term : PARENTESIS_ABRE . Exp PARENTESIS_CIERRA  (70)

	PARENTESIS_ABRE  shift 26
	TRUE  shift 30
	FALSE_T  shift 31
	NULL_T  shift 32
	DIGITO  shift 37
	VAR  shift 54
	STRING  shift 39
	.  error

	Exp  goto 55
	AddExp  goto 45
	EqExp  goto 46
	MultExp  goto 47
	RelExp  goto 48
	CondAndExp  goto 49
	CondOrExp  goto 50
	Term  goto 51


state 27
	Statement : WHILE . PARENTESIS_ABRE Exp PARENTESIS_CIERRA CodeBlock Statement  (22)

	PARENTESIS_ABRE  shift 56
	.  error


state 28
	Statement : IF . PARENTESIS_ABRE Exp PARENTESIS_CIERRA CodeBlock Statement  (23)
	Statement : IF . PARENTESIS_ABRE Exp PARENTESIS_CIERRA CodeBlock ELSE CodeBlock Statement  (24)

	PARENTESIS_ABRE  shift 57
	.  error


state 29
	Statement : DO . CodeBlock WHILE PARENTESIS_ABRE Exp PARENTESIS_CIERRA SEMICOLON Statement  (25)

	C_BRACKET_ABRE  shift 19
	.  error

	CodeBlock  goto 58


state 30
	Term : TRUE .  (63)

	.  reduce 63


state 31
	Term : FALSE_T .  (64)

	.  reduce 64


state 32
	Term : NULL_T .  (66)

	.  reduce 66


state 33
	Statement : BREAK . SEMICOLON  (27)

	SEMICOLON  shift 59
	.  error


state 34
	Statement : RETURN . Exp SEMICOLON  (26)

	PARENTESIS_ABRE  shift 26
	TRUE  shift 30
	FALSE_T  shift 31
	NULL_T  shift 32
	DIGITO  shift 37
	VAR  shift 54
	STRING  shift 39
	.  error

	Exp  goto 60
	AddExp  goto 45
	EqExp  goto 46
	MultExp  goto 47
	RelExp  goto 48
	CondAndExp  goto 49
	CondOrExp  goto 50
	Term  goto 51


state 35
	SpecialFunction : NAME . VAR COMMA LASTNAME VAR COMMA CATEGORY VAR COMMA ID DIGITO COMMA ANTIQUITY DIGITO COMMA SALARY DIGITO  (29)

	VAR  shift 61
	.  error


state 36
	Statement : EMPLOYEE . VAR ASSIGN SpecialFunction SEMICOLON Statement  (20)
	Statement : EMPLOYEE . VAR S_BRACKET_ABRE DIGITO S_BRACKET_CIERRA ASSIGN EmpValues SEMICOLON Statement  (21)

	VAR  shift 62
	.  error


state 37
	Term : DIGITO .  (62)

	.  reduce 62


state 38
	Statement : VAR . ASSIGN Exp SEMICOLON Statement  (19)
	SpecialFunction : VAR . SALARYFOR DIGITO TimeLapse  (30)
	Term : VAR .  (61)
	Term : VAR . S_BRACKET_ABRE VAR S_BRACKET_CIERRA DOT VAR  (67)
	Term : VAR . S_BRACKET_ABRE DIGITO S_BRACKET_CIERRA DOT VAR  (68)
	Term : VAR . PARENTESIS_ABRE FirstVal PARENTESIS_CIERRA  (69)

	PARENTESIS_ABRE  shift 63
	S_BRACKET_ABRE  shift 64
	ASSIGN  shift 65
	SALARYFOR  shift 66
	PLUS  reduce 61
	MINUS  reduce 61
	MULT  reduce 61
	DIV  reduce 61
	MOD  reduce 61
	GT  reduce 61
	LT  reduce 61
	GE  reduce 61
	LE  reduce 61
	EQ  reduce 61
	AND  reduce 61
	OR  reduce 61
	NE  reduce 61
	SEMICOLON  reduce 61


state 39
	Term : STRING .  (65)

	.  reduce 65


state 40
	SpecialFunction : SHOW_EMPLOYEE . VAR  (31)

	VAR  shift 67
	.  error


state 41
	Statement : SpecialFunction . SEMICOLON Statement  (16)

	SEMICOLON  shift 68
	.  error


state 42
	Statement : Variable . SEMICOLON Statement  (14)
	Statement : Variable . ASSIGN SpecialFunction SEMICOLON Statement  (17)
	Statement : Variable . ASSIGN Exp SEMICOLON Statement  (18)

	ASSIGN  shift 69
	SEMICOLON  shift 70
	.  error


state 43
	CodeBlock : C_BRACKET_ABRE Statement . C_BRACKET_CIERRA  (13)

	C_BRACKET_CIERRA  shift 71
	.  error


state 44
	Statement : Exp . SEMICOLON Statement  (15)

	SEMICOLON  shift 72
	.  error


state 45
	AddExp : AddExp . PLUS MultExp  (43)
	AddExp : AddExp . MINUS MultExp  (44)
	RelExp : AddExp .  (45)

	PLUS  shift 73
	MINUS  shift 74
	PARENTESIS_CIERRA  reduce 45
	GT  reduce 45
	LT  reduce 45
	GE  reduce 45
	LE  reduce 45
	EQ  reduce 45
	AND  reduce 45
	OR  reduce 45
	NE  reduce 45
	SEMICOLON  reduce 45
	COMMA  reduce 45


state 46
	EqExp : EqExp . EQ RelExp  (51)
	EqExp : EqExp . NE RelExp  (52)
	CondAndExp : EqExp .  (53)

	EQ  shift 75
	NE  shift 76
	PARENTESIS_CIERRA  reduce 53
	AND  reduce 53
	OR  reduce 53
	SEMICOLON  reduce 53
	COMMA  reduce 53


state 47
	MultExp : MultExp . MULT Term  (39)
	MultExp : MultExp . DIV Term  (40)
	MultExp : MultExp . MOD Term  (41)
	AddExp : MultExp .  (42)

	MULT  shift 77
	DIV  shift 78
	MOD  shift 79
	PARENTESIS_CIERRA  reduce 42
	PLUS  reduce 42
	MINUS  reduce 42
	GT  reduce 42
	LT  reduce 42
	GE  reduce 42
	LE  reduce 42
	EQ  reduce 42
	AND  reduce 42
	OR  reduce 42
	NE  reduce 42
	SEMICOLON  reduce 42
	COMMA  reduce 42


state 48
	RelExp : RelExp . LT AddExp  (46)
	RelExp : RelExp . GT AddExp  (47)
	RelExp : RelExp . LE AddExp  (48)
	RelExp : RelExp . GE AddExp  (49)
	EqExp : RelExp .  (50)

	GT  shift 80
	LT  shift 81
	GE  shift 82
	LE  shift 83
	PARENTESIS_CIERRA  reduce 50
	EQ  reduce 50
	AND  reduce 50
	OR  reduce 50
	NE  reduce 50
	SEMICOLON  reduce 50
	COMMA  reduce 50


state 49
	CondAndExp : CondAndExp . AND EqExp  (54)
	CondOrExp : CondAndExp .  (55)

	AND  shift 84
	PARENTESIS_CIERRA  reduce 55
	OR  reduce 55
	SEMICOLON  reduce 55
	COMMA  reduce 55


state 50
	Exp : CondOrExp .  (37)
	CondOrExp : CondOrExp . OR CondAndExp  (56)

	OR  shift 85
	PARENTESIS_CIERRA  reduce 37
	SEMICOLON  reduce 37
	COMMA  reduce 37


state 51
	MultExp : Term .  (38)

	.  reduce 38


state 52
	Main : TYPE MAIN PARENTESIS_ABRE VOID PARENTESIS_CIERRA . CodeBlock  (71)

	C_BRACKET_ABRE  shift 19
	.  error

	CodeBlock  goto 86


state 53
	CommaVariable : CommaVariable COMMA . Variable  (10)

	TYPE  shift 16
	.  error

	Variable  goto 87


state 54
	Term : VAR .  (61)
	Term : VAR . S_BRACKET_ABRE VAR S_BRACKET_CIERRA DOT VAR  (67)
	Term : VAR . S_BRACKET_ABRE DIGITO S_BRACKET_CIERRA DOT VAR  (68)
	Term : VAR . PARENTESIS_ABRE FirstVal PARENTESIS_CIERRA  (69)

	PARENTESIS_ABRE  shift 63
	S_BRACKET_ABRE  shift 64
	PARENTESIS_CIERRA  reduce 61
	PLUS  reduce 61
	MINUS  reduce 61
	MULT  reduce 61
	DIV  reduce 61
	MOD  reduce 61
	GT  reduce 61
	LT  reduce 61
	GE  reduce 61
	LE  reduce 61
	EQ  reduce 61
	AND  reduce 61
	OR  reduce 61
	NE  reduce 61
	SEMICOLON  reduce 61
	COMMA  reduce 61


state 55
	Term : PARENTESIS_ABRE Exp . PARENTESIS_CIERRA  (70)

	PARENTESIS_CIERRA  shift 88
	.  error


state 56
	Statement : WHILE PARENTESIS_ABRE . Exp PARENTESIS_CIERRA CodeBlock Statement  (22)

	PARENTESIS_ABRE  shift 26
	TRUE  shift 30
	FALSE_T  shift 31
	NULL_T  shift 32
	DIGITO  shift 37
	VAR  shift 54
	STRING  shift 39
	.  error

	Exp  goto 89
	AddExp  goto 45
	EqExp  goto 46
	MultExp  goto 47
	RelExp  goto 48
	CondAndExp  goto 49
	CondOrExp  goto 50
	Term  goto 51


state 57
	Statement : IF PARENTESIS_ABRE . Exp PARENTESIS_CIERRA CodeBlock Statement  (23)
	Statement : IF PARENTESIS_ABRE . Exp PARENTESIS_CIERRA CodeBlock ELSE CodeBlock Statement  (24)

	PARENTESIS_ABRE  shift 26
	TRUE  shift 30
	FALSE_T  shift 31
	NULL_T  shift 32
	DIGITO  shift 37
	VAR  shift 54
	STRING  shift 39
	.  error

	Exp  goto 90
	AddExp  goto 45
	EqExp  goto 46
	MultExp  goto 47
	RelExp  goto 48
	CondAndExp  goto 49
	CondOrExp  goto 50
	Term  goto 51


state 58
	Statement : DO CodeBlock . WHILE PARENTESIS_ABRE Exp PARENTESIS_CIERRA SEMICOLON Statement  (25)

	WHILE  shift 91
	.  error


state 59
	Statement : BREAK SEMICOLON .  (27)

	.  reduce 27


state 60
	Statement : RETURN Exp . SEMICOLON  (26)

	SEMICOLON  shift 92
	.  error


state 61
	SpecialFunction : NAME VAR . COMMA LASTNAME VAR COMMA CATEGORY VAR COMMA ID DIGITO COMMA ANTIQUITY DIGITO COMMA SALARY DIGITO  (29)

	COMMA  shift 93
	.  error


state 62
	Statement : EMPLOYEE VAR . ASSIGN SpecialFunction SEMICOLON Statement  (20)
	Statement : EMPLOYEE VAR . S_BRACKET_ABRE DIGITO S_BRACKET_CIERRA ASSIGN EmpValues SEMICOLON Statement  (21)

	S_BRACKET_ABRE  shift 94
	ASSIGN  shift 95
	.  error


state 63
	Term : VAR PARENTESIS_ABRE . FirstVal PARENTESIS_CIERRA  (69)
	FirstVal : .  (58)

	PARENTESIS_ABRE  shift 26
	TRUE  shift 30
	FALSE_T  shift 31
	NULL_T  shift 32
	DIGITO  shift 37
	VAR  shift 54
	STRING  shift 39
	PARENTESIS_CIERRA  reduce 58

	Exp  goto 96
	AddExp  goto 45
	EqExp  goto 46
	MultExp  goto 47
	RelExp  goto 48
	CondAndExp  goto 49
	CondOrExp  goto 50
	FirstVal  goto 97
	Term  goto 51


state 64
	Term : VAR S_BRACKET_ABRE . VAR S_BRACKET_CIERRA DOT VAR  (67)
	Term : VAR S_BRACKET_ABRE . DIGITO S_BRACKET_CIERRA DOT VAR  (68)

	DIGITO  shift 98
	VAR  shift 99
	.  error


state 65
	Statement : VAR ASSIGN . Exp SEMICOLON Statement  (19)

	PARENTESIS_ABRE  shift 26
	TRUE  shift 30
	FALSE_T  shift 31
	NULL_T  shift 32
	DIGITO  shift 37
	VAR  shift 54
	STRING  shift 39
	.  error

	Exp  goto 100
	AddExp  goto 45
	EqExp  goto 46
	MultExp  goto 47
	RelExp  goto 48
	CondAndExp  goto 49
	CondOrExp  goto 50
	Term  goto 51


state 66
	SpecialFunction : VAR SALARYFOR . DIGITO TimeLapse  (30)

	DIGITO  shift 101
	.  error


state 67
	SpecialFunction : SHOW_EMPLOYEE VAR .  (31)

	.  reduce 31


state 68
	Statement : SpecialFunction SEMICOLON . Statement  (16)
	Statement : .  (28)

	PARENTESIS_ABRE  shift 26
	WHILE  shift 27
	IF  shift 28
	DO  shift 29
	TRUE  shift 30
	FALSE_T  shift 31
	NULL_T  shift 32
	BREAK  shift 33
	RETURN  shift 34
	NAME  shift 35
	EMPLOYEE  shift 36
	DIGITO  shift 37
	VAR  shift 38
	TYPE  shift 16
	STRING  shift 39
	SHOW_EMPLOYEE  shift 40
	C_BRACKET_CIERRA  reduce 28

	SpecialFunction  goto 41
	Variable  goto 42
	Statement  goto 102
	Exp  goto 44
	AddExp  goto 45
	EqExp  goto 46
	MultExp  goto 47
	RelExp  goto 48
	CondAndExp  goto 49
	CondOrExp  goto 50
	Term  goto 51


state 69
	Statement : Variable ASSIGN . SpecialFunction SEMICOLON Statement  (17)
	Statement : Variable ASSIGN . Exp SEMICOLON Statement  (18)

	PARENTESIS_ABRE  shift 26
	TRUE  shift 30
	FALSE_T  shift 31
	NULL_T  shift 32
	NAME  shift 35
	DIGITO  shift 37
	VAR  shift 103
	STRING  shift 39
	SHOW_EMPLOYEE  shift 40
	.  error

	SpecialFunction  goto 104
	Exp  goto 105
	AddExp  goto 45
	EqExp  goto 46
	MultExp  goto 47
	RelExp  goto 48
	CondAndExp  goto 49
	CondOrExp  goto 50
	Term  goto 51


state 70
	Statement : Variable SEMICOLON . Statement  (14)
	Statement : .  (28)

	PARENTESIS_ABRE  shift 26
	WHILE  shift 27
	IF  shift 28
	DO  shift 29
	TRUE  shift 30
	FALSE_T  shift 31
	NULL_T  shift 32
	BREAK  shift 33
	RETURN  shift 34
	NAME  shift 35
	EMPLOYEE  shift 36
	DIGITO  shift 37
	VAR  shift 38
	TYPE  shift 16
	STRING  shift 39
	SHOW_EMPLOYEE  shift 40
	C_BRACKET_CIERRA  reduce 28

	SpecialFunction  goto 41
	Variable  goto 42
	Statement  goto 106
	Exp  goto 44
	AddExp  goto 45
	EqExp  goto 46
	MultExp  goto 47
	RelExp  goto 48
	CondAndExp  goto 49
	CondOrExp  goto 50
	Term  goto 51


state 71
	CodeBlock : C_BRACKET_ABRE Statement C_BRACKET_CIERRA .  (13)

	.  reduce 13


state 72
	Statement : Exp SEMICOLON . Statement  (15)
	Statement : .  (28)

	PARENTESIS_ABRE  shift 26
	WHILE  shift 27
	IF  shift 28
	DO  shift 29
	TRUE  shift 30
	FALSE_T  shift 31
	NULL_T  shift 32
	BREAK  shift 33
	RETURN  shift 34
	NAME  shift 35
	EMPLOYEE  shift 36
	DIGITO  shift 37
	VAR  shift 38
	TYPE  shift 16
	STRING  shift 39
	SHOW_EMPLOYEE  shift 40
	C_BRACKET_CIERRA  reduce 28

	SpecialFunction  goto 41
	Variable  goto 42
	Statement  goto 107
	Exp  goto 44
	AddExp  goto 45
	EqExp  goto 46
	MultExp  goto 47
	RelExp  goto 48
	CondAndExp  goto 49
	CondOrExp  goto 50
	Term  goto 51


state 73
	AddExp : AddExp PLUS . MultExp  (43)

	PARENTESIS_ABRE  shift 26
	TRUE  shift 30
	FALSE_T  shift 31
	NULL_T  shift 32
	DIGITO  shift 37
	VAR  shift 54
	STRING  shift 39
	.  error

	MultExp  goto 108
	Term  goto 51


state 74
	AddExp : AddExp MINUS . MultExp  (44)

	PARENTESIS_ABRE  shift 26
	TRUE  shift 30
	FALSE_T  shift 31
	NULL_T  shift 32
	DIGITO  shift 37
	VAR  shift 54
	STRING  shift 39
	.  error

	MultExp  goto 109
	Term  goto 51


state 75
	EqExp : EqExp EQ . RelExp  (51)

	PARENTESIS_ABRE  shift 26
	TRUE  shift 30
	FALSE_T  shift 31
	NULL_T  shift 32
	DIGITO  shift 37
	VAR  shift 54
	STRING  shift 39
	.  error

	AddExp  goto 45
	MultExp  goto 47
	RelExp  goto 110
	Term  goto 51


state 76
	EqExp : EqExp NE . RelExp  (52)

	PARENTESIS_ABRE  shift 26
	TRUE  shift 30
	FALSE_T  shift 31
	NULL_T  shift 32
	DIGITO  shift 37
	VAR  shift 54
	STRING  shift 39
	.  error

	AddExp  goto 45
	MultExp  goto 47
	RelExp  goto 111
	Term  goto 51


state 77
	MultExp : MultExp MULT . Term  (39)

	PARENTESIS_ABRE  shift 26
	TRUE  shift 30
	FALSE_T  shift 31
	NULL_T  shift 32
	DIGITO  shift 37
	VAR  shift 54
	STRING  shift 39
	.  error

	Term  goto 112


state 78
	MultExp : MultExp DIV . Term  (40)

	PARENTESIS_ABRE  shift 26
	TRUE  shift 30
	FALSE_T  shift 31
	NULL_T  shift 32
	DIGITO  shift 37
	VAR  shift 54
	STRING  shift 39
	.  error

	Term  goto 113


state 79
	MultExp : MultExp MOD . Term  (41)

	PARENTESIS_ABRE  shift 26
	TRUE  shift 30
	FALSE_T  shift 31
	NULL_T  shift 32
	DIGITO  shift 37
	VAR  shift 54
	STRING  shift 39
	.  error

	Term  goto 114


state 80
	RelExp : RelExp GT . AddExp  (47)

	PARENTESIS_ABRE  shift 26
	TRUE  shift 30
	FALSE_T  shift 31
	NULL_T  shift 32
	DIGITO  shift 37
	VAR  shift 54
	STRING  shift 39
	.  error

	AddExp  goto 115
	MultExp  goto 47
	Term  goto 51


state 81
	RelExp : RelExp LT . AddExp  (46)

	PARENTESIS_ABRE  shift 26
	TRUE  shift 30
	FALSE_T  shift 31
	NULL_T  shift 32
	DIGITO  shift 37
	VAR  shift 54
	STRING  shift 39
	.  error

	AddExp  goto 116
	MultExp  goto 47
	Term  goto 51


state 82
	RelExp : RelExp GE . AddExp  (49)

	PARENTESIS_ABRE  shift 26
	TRUE  shift 30
	FALSE_T  shift 31
	NULL_T  shift 32
	DIGITO  shift 37
	VAR  shift 54
	STRING  shift 39
	.  error

	AddExp  goto 117
	MultExp  goto 47
	Term  goto 51


state 83
	RelExp : RelExp LE . AddExp  (48)

	PARENTESIS_ABRE  shift 26
	TRUE  shift 30
	FALSE_T  shift 31
	NULL_T  shift 32
	DIGITO  shift 37
	VAR  shift 54
	STRING  shift 39
	.  error

	AddExp  goto 118
	MultExp  goto 47
	Term  goto 51


state 84
	CondAndExp : CondAndExp AND . EqExp  (54)

	PARENTESIS_ABRE  shift 26
	TRUE  shift 30
	FALSE_T  shift 31
	NULL_T  shift 32
	DIGITO  shift 37
	VAR  shift 54
	STRING  shift 39
	.  error

	AddExp  goto 45
	EqExp  goto 119
	MultExp  goto 47
	RelExp  goto 48
	Term  goto 51


state 85
	CondOrExp : CondOrExp OR . CondAndExp  (56)

	PARENTESIS_ABRE  shift 26
	TRUE  shift 30
	FALSE_T  shift 31
	NULL_T  shift 32
	DIGITO  shift 37
	VAR  shift 54
	STRING  shift 39
	.  error

	AddExp  goto 45
	EqExp  goto 46
	MultExp  goto 47
	RelExp  goto 48
	CondAndExp  goto 120
	Term  goto 51


state 86
	Main : TYPE MAIN PARENTESIS_ABRE VOID PARENTESIS_CIERRA CodeBlock .  (71)

	.  reduce 71


state 87
	CommaVariable : CommaVariable COMMA Variable .  (10)

	.  reduce 10


state 88
	Term : PARENTESIS_ABRE Exp PARENTESIS_CIERRA .  (70)

	.  reduce 70


state 89
	Statement : WHILE PARENTESIS_ABRE Exp . PARENTESIS_CIERRA CodeBlock Statement  (22)

	PARENTESIS_CIERRA  shift 121
	.  error


state 90
	Statement : IF PARENTESIS_ABRE Exp . PARENTESIS_CIERRA CodeBlock Statement  (23)
	Statement : IF PARENTESIS_ABRE Exp . PARENTESIS_CIERRA CodeBlock ELSE CodeBlock Statement  (24)

	PARENTESIS_CIERRA  shift 122
	.  error


state 91
	Statement : DO CodeBlock WHILE . PARENTESIS_ABRE Exp PARENTESIS_CIERRA SEMICOLON Statement  (25)

	PARENTESIS_ABRE  shift 123
	.  error


state 92
	Statement : RETURN Exp SEMICOLON .  (26)

	.  reduce 26


state 93
	SpecialFunction : NAME VAR COMMA . LASTNAME VAR COMMA CATEGORY VAR COMMA ID DIGITO COMMA ANTIQUITY DIGITO COMMA SALARY DIGITO  (29)

	LASTNAME  shift 124
	.  error


state 94
	Statement : EMPLOYEE VAR S_BRACKET_ABRE . DIGITO S_BRACKET_CIERRA ASSIGN EmpValues SEMICOLON Statement  (21)

	DIGITO  shift 125
	.  error


state 95
	Statement : EMPLOYEE VAR ASSIGN . SpecialFunction SEMICOLON Statement  (20)

	NAME  shift 35
	VAR  shift 126
	SHOW_EMPLOYEE  shift 40
	.  error

	SpecialFunction  goto 127


state 96
	FirstVal : Exp . CommaVal  (57)
	CommaVal : .  (60)

	.  reduce 60

	CommaVal  goto 128


state 97
	Term : VAR PARENTESIS_ABRE FirstVal . PARENTESIS_CIERRA  (69)

	PARENTESIS_CIERRA  shift 129
	.  error


state 98
	Term : VAR S_BRACKET_ABRE DIGITO . S_BRACKET_CIERRA DOT VAR  (68)

	S_BRACKET_CIERRA  shift 130
	.  error


state 99
	Term : VAR S_BRACKET_ABRE VAR . S_BRACKET_CIERRA DOT VAR  (67)

	S_BRACKET_CIERRA  shift 131
	.  error


state 100
	Statement : VAR ASSIGN Exp . SEMICOLON Statement  (19)

	SEMICOLON  shift 132
	.  error


state 101
	SpecialFunction : VAR SALARYFOR DIGITO . TimeLapse  (30)

	MONTH  shift 133
	WEEK  shift 134
	YEAR  shift 135
	.  error

	TimeLapse  goto 136


state 102
	Statement : SpecialFunction SEMICOLON Statement .  (16)

	.  reduce 16


state 103
	SpecialFunction : VAR . SALARYFOR DIGITO TimeLapse  (30)
	Term : VAR .  (61)
	Term : VAR . S_BRACKET_ABRE VAR S_BRACKET_CIERRA DOT VAR  (67)
	Term : VAR . S_BRACKET_ABRE DIGITO S_BRACKET_CIERRA DOT VAR  (68)
	Term : VAR . PARENTESIS_ABRE FirstVal PARENTESIS_CIERRA  (69)

	PARENTESIS_ABRE  shift 63
	S_BRACKET_ABRE  shift 64
	SALARYFOR  shift 66
	PLUS  reduce 61
	MINUS  reduce 61
	MULT  reduce 61
	DIV  reduce 61
	MOD  reduce 61
	GT  reduce 61
	LT  reduce 61
	GE  reduce 61
	LE  reduce 61
	EQ  reduce 61
	AND  reduce 61
	OR  reduce 61
	NE  reduce 61
	SEMICOLON  reduce 61


state 104
	Statement : Variable ASSIGN SpecialFunction . SEMICOLON Statement  (17)

	SEMICOLON  shift 137
	.  error


state 105
	Statement : Variable ASSIGN Exp . SEMICOLON Statement  (18)

	SEMICOLON  shift 138
	.  error


state 106
	Statement : Variable SEMICOLON Statement .  (14)

	.  reduce 14


state 107
	Statement : Exp SEMICOLON Statement .  (15)

	.  reduce 15


state 108
	MultExp : MultExp . MULT Term  (39)
	MultExp : MultExp . DIV Term  (40)
	MultExp : MultExp . MOD Term  (41)
	AddExp : AddExp PLUS MultExp .  (43)

	MULT  shift 77
	DIV  shift 78
	MOD  shift 79
	PARENTESIS_CIERRA  reduce 43
	PLUS  reduce 43
	MINUS  reduce 43
	GT  reduce 43
	LT  reduce 43
	GE  reduce 43
	LE  reduce 43
	EQ  reduce 43
	AND  reduce 43
	OR  reduce 43
	NE  reduce 43
	SEMICOLON  reduce 43
	COMMA  reduce 43


state 109
	MultExp : MultExp . MULT Term  (39)
	MultExp : MultExp . DIV Term  (40)
	MultExp : MultExp . MOD Term  (41)
	AddExp : AddExp MINUS MultExp .  (44)
